--- a/TareaExamen/1parcial/Tarea-ExamenI.tex
+++ b/TareaExamen/1parcial/Tarea-ExamenI.tex
@@ -843,8 +843,195 @@ Finalmente veamos que $ \lambda_1 = 4, \lambda_2 = 3, \lambda_3 = 0 $ y efectiva
 \end{center}
 
 %%%%%%%%%%%%5
-\noindent12. Muestre que $\beta^{'} =\{ -3+x , -3-13x + 4x^2, 1+x \}$, es una base para $ \mathbb{P}_{2}(\mathbb{R})$ y además determine $[T]_{\beta^{'}}$ \\
-Primero veamos quién es la generada de $ \beta' $
+\noindent12. Muestre que $\beta^{'} =\{ -3+x , -3-13x + 4x^2, 1+x \}$, es una base para $ \mathbb{P}_{2}(\mathbb{R})$ y además determine $[T]_{\beta^{'}}$ \\ \\
+Primero veamos quién es la generada de $ \beta' $, para lo que tomemos elementos elementos aleatorios del campo y veamos a los  elementos de $ \beta' $ como combinación lineal. \\
+Sean $ \alpha, \alpha_2, \alpha_3 \in \R $
+\begin{align*}
+	\alpha_1(-3 +x) + \alpha_2(-3 -13x + 4x^2) + \alpha_2(1+x) &= \beta_1(1 + 0x +0x^2) + \beta_2(0 + x + 0x^2) + \beta_3(0 + 0x + x^2)\\
+	\alpha_1(-3 +x + 0x^2) + \alpha_2(-3 -13x + 4x^2) + \alpha_2(1+x + 0x^2) &= \beta_1(1 + 0x +0x^2) + \beta_2(0 + x + 0x^2) + \beta_3(0 + 0x + x^2)\\
+	(-3\alpha_1 - 3\alpha_2 + \alpha_3) + (\alpha_1 -13 \alpha_2 +
+	\alpha_3)x +(0\alpha_1 + 4 \alpha_2 + 0\alpha_3)x^2 &= (\beta_1 + 0\beta_2 + 0\beta_3) + (0\beta_1 + \beta_2 + 0\beta_3)x + (0\beta_1 + \beta_2 + \beta_3)x^2\\
+	\\
+	-3\alpha_1 - 3\alpha_2 + \alpha_3 &= \beta_1 + 0\beta_2 + 0\beta_3\\
+	\alpha_1 -13 \alpha_2 +
+	\alpha_3 & =0\beta_1 + \beta_2 + 0\beta_3\\
+	0\alpha_1 + 4 \alpha_2 + 0\alpha_3 &= 0\beta_1 + \beta_2 + \beta_3
+\end{align*}
+luego, resolvamos el sistema de equaciones anterior, adjuntando la identidad y reduciéndola a su forma escalonada
+
+\begin{align*}
+	\begin{pmatrix}[ccc|ccc]
+	-3 & -3 & 1 & 1 & 0 & 0\\
+	1 & -13 & 1 & 0 & 1 & 0\\
+	0 & 4 & 0 & 0 & 0 & 1
+	\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	1 & -13 & 1 & 0 & 1 & 0\\
+	0 & 4 & 0 & 0 & 0 & 1
+	\end{pmatrix} && \text{1a fila } \* -\frac{1}{3}\\
+	%%%%%%%%%%%%%% 2da operacion %%%%%%%%%%%%%
+	\begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	1 & -13 & 1 & 0 & 1 & 0\\
+	0 & 4 & 0 & 0 & 0 & 1
+	\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & -14 & \frac{4}{3} & \frac{1}{3} & 1 & 0\\
+	0 & 4 & 0 & 0 & 0 & 1
+	\end{pmatrix} && \text{1a fila $ \* -1 + 2^a$ Fila en 2a fila }\\
+	%%%%%%%%% 3a operación %%%%%%%%
+	\begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & -14 & \frac{4}{3} & \frac{1}{3} & 1 & 0\\
+	0 & 4 & 0 & 0 & 0 & 1
+	\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & -\frac{2}{21} & -\frac{1}{42} & -\frac{1}{14} & 0\\
+	0 & 4 & 0 & 0 & 0 & 1
+	\end{pmatrix} && \text{2a fila } \* - \frac{1}{14}\\
+	%%%%%%%%% 4a operacion 
+	\begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & -\frac{2}{21} & -\frac{1}{42} & -\frac{1}{14} & 0\\
+	0 & 4 & 0 & 0 & 0 & 1
+	\end{pmatrix}  &= \begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & -\frac{2}{21} & -\frac{1}{42} & -\frac{1}{14} & 0\\
+	0 & 0 & \frac{8}{21} & \frac{2}{21} & \frac{2}{7} & 1
+	\end{pmatrix}  && \text{2a fila $ \* -4 $ + 3a fila en 3a fila } \\
+	%%%%%%%%% 5a opreracion %%%%%%%%%
+	\begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & -\frac{2}{21} & -\frac{1}{42} & -\frac{1}{14} & 0\\
+	0 & 0 & \frac{8}{21} & \frac{2}{21} & \frac{2}{7} & 1
+	\end{pmatrix}  & = \begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & -\frac{2}{21} & -\frac{1}{42} & -\frac{1}{14} & 0\\
+	0 & 0 & 1 & \frac{1}{4} & \frac{3}{4} & \frac{21}{8}
+	\end{pmatrix}  && \text{3a fila } \* \frac{21}{8}\\
+	%%%%%%%%%%%%%% 6a operación
+	\begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & -\frac{2}{21} & -\frac{1}{42} & -\frac{1}{14} & 0\\
+	0 & 0 & 1 & \frac{1}{4} & \frac{3}{4} & \frac{21}{8}
+	\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & 0 & 0 & \frac{1}{4} & 0\\
+	0 & 0 & 1 & \frac{1}{4} & \frac{3}{4} & \frac{21}{8}
+	\end{pmatrix} && \text{3a fila $ \* \frac{2}{21} $ + 2a fila en 2a fila}\\
+	%%%%%%%%%%%%%%% 7a operación %%%%%%%%%%%%
+	\begin{pmatrix}[ccc|ccc]
+	1 & 1 & -\frac{1}{3} & -\frac{1}{3} & 0 & 0\\
+	0 & 1 & 0 & 0 & \frac{1}{4} & 0\\
+	0 & 0 & 1 & \frac{1}{4} & \frac{3}{4} & \frac{21}{8}
+	\end{pmatrix}  &= \begin{pmatrix}[ccc|ccc]
+	1 & 1 & 0 & -\frac{1}{4} & \frac{1}{4} & \frac{7}{8} \\
+	0 & 1 & 0 & 0 & \frac{1}{4} & 0\\
+	0 & 0 & 1 & \frac{1}{4} & \frac{3}{4} & \frac{21}{8}
+	\end{pmatrix}  && \text{3a fila $ \* \frac{1}{3} + $ 1a fila en 1a fila } \\
+	%%%%%%%%%%%%% 8a operación %%%%%%
+	\begin{pmatrix}[ccc|ccc]
+	1 & 1 & 0 & -\frac{1}{4} & \frac{1}{4} & \frac{7}{8} \\
+	0 & 1 & 0 & 0 & \frac{1}{4} & 0\\
+	0 & 0 & 1 & \frac{1}{4} & \frac{3}{4} & \frac{21}{8}
+	\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+	1 & 0 & 0 & -\frac{1}{4} & \frac{1}{4} & \frac{5}{8} \\
+	0 & 1 & 0 & 0 & \frac{1}{4} & 0\\
+	0 & 0 & 1 & \frac{1}{4} & \frac{3}{4} & \frac{21}{8}
+	\end{pmatrix} && \text{2a fila $ \* -1 + $ 1a fila en 1a fila}
+\end{align*}
+Así hemos encontrado la solución al sistema de equaciónes planteado
+\begin{center}
+	$ \therefore \qquad <\beta'> = \Po$
+\end{center}
+Ahora veamos si es linealmente independiente, para ello, debe ocurrir que la única solución a \[ \alpha_1(-3 + x) + \alpha_2(-3 -13x + 4x^2) + \alpha_3(1 + x) = 0 \]
+sea que $$ \alpha_1 = \alpha_2 =  \alpha_3 = 0 $$
+entonces obtenemos el siguiente sistema
+\begin{align*}
+\begin{pmatrix}[ccc|c]
+-3 & -3 & 1 & 0 \\
+1 & -13 & 1 & 0\\
+0 & 4 & 0 & 0 
+\end{pmatrix} &= \begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+1 & -13 & 1 & 0 \\
+0 & 4 & 0 & 0 
+\end{pmatrix} && \text{1a fila } \* -\frac{1}{3}\\
+%%%%%%%%%%%%%% 2da operacion %%%%%%%%%%%%%
+\begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3}  0\\
+1 & -13 & 1 & 0\\
+0 & 4 & 0 & 0
+\end{pmatrix} &= \begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} &  0\\
+0 & -14 & \frac{4}{3} & 0\\
+0 & 4 & 0 & 0 
+\end{pmatrix} && \text{1a fila $ \* -1 + 2^a$ Fila en 2a fila }\\
+%%%%%%%%% 3a operación %%%%%%%%
+\begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & -14 & \frac{4}{3} &0\\
+0 & 4 & 0 & 0 
+\end{pmatrix} &= \begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & -\frac{2}{21} & 0\\
+0 & 4 & 0 & 0
+\end{pmatrix} && \text{2a fila } \* - \frac{1}{14}\\
+%%%%%%%%% 4a operacion 
+\begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & -\frac{2}{21} & 0\\
+0 & 4 & 0 & 0
+\end{pmatrix}  &= \begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & -\frac{2}{21} & 0\\
+0 & 0 & \frac{8}{21} & 0
+\end{pmatrix}  && \text{2a fila $ \* -4 $ + 3a fila en 3a fila } \\
+%%%%%%%%% 5a opreracion %%%%%%%%%
+\begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & -\frac{2}{21} & 0\\
+0 & 0 & \frac{8}{21} & 0
+\end{pmatrix}  & = \begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & -\frac{2}{21} & 0\\
+0 & 0 & 1 & 0
+\end{pmatrix}  && \text{3a fila } \* \frac{21}{8}\\
+%%%%%%%%%%%%%% 6a operación
+\begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & -\frac{2}{21} & 0\\
+0 & 0 & 1 & 0
+\end{pmatrix} &= \begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & 0 & 0\\
+0 & 0 & 1 & 0
+\end{pmatrix} && \text{3a fila $ \* \frac{2}{21} $ + 2a fila en 2a fila}\\
+%%%%%%%%%%%%%%% 7a operación %%%%%%%%%%%%
+\begin{pmatrix}[ccc|c]
+1 & 1 & -\frac{1}{3} & 0\\
+0 & 1 & 0 & 0\\
+0 & 0 & 1 & 0
+\end{pmatrix}  &= \begin{pmatrix}[ccc|c]
+1 & 1 & 0 & 0 \\
+0 & 1 & 0 & 0\\
+0 & 0 & 1 & 0
+\end{pmatrix}  && \text{3a fila $ \* \frac{1}{3} + $ 1a fila en 1a fila } \\
+%%%%%%%%%%%%% 8a operación %%%%%%
+\begin{pmatrix}[ccc|ccc]
+1 & 1 & 0 & 0\\
+0 & 1 & 0 & 0\\
+0 & 0 & 1 & 0
+\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+1 & 0 & 0 & 0 \\
+0 & 1 & 0 & 0\\
+0 & 0 & 1 & 0
+\end{pmatrix} && \text{2a fila $ \* -1 + $ 1a fila en 1a fila}
+\end{align*}
+\begin{center}
+	$ \therefore \qquad \beta' $ es linealmente independiete\\
+	$ \therefore \qquad \beta' $ es base para $ \Po $
+\end{center}
 
 
 \end{document}
